# opensmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: autopatch.md  cli.md  config.md  dashboard.md  opentelemetry.md  otel.md  postgres.md  quickstart.md  storage.md
examples/: async_trace.py  autopatch_demo.py  console_mode.py  openai_trace.py  opensmith.json  rag_pipeline.py
marketing/: launch-content.md
opensmith/: __init__.py  cli.py  config.py  console.py  models.py  otel.py  patcher.py  server.py  storage.py  tokens.py  tracer.py  websocket_manager.py
opensmith/ui/: index.html
scripts/: seed_demo_data.py
tests/: conftest.py  test_cli.py  test_config.py  test_console.py  test_models.py  test_otel.py  test_storage.py  test_tokens.py  test_tracer.py
